Changed app layout navbar to collapse better. fixed z-index on card for app layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,9 @@ body {
   max-width: 42em;
 }
 
+.card {
+  z-index: -10;
+}
 
 /*
  * Header
@@ -232,6 +235,7 @@ body {
   right: 0;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .card-about {
